# project-portfolio

./:  .gitignore  pyproject.toml
portafolio/: db.sqlite3
portafolio/about_me/: admin.py  apps.py  models.py  views.py
portafolio/about_me/migrations/: 0001_initial.py  0002_alter_aboutme_education_alter_aboutme_experience_and_more.py  0003_alter_aboutme_education_alter_aboutme_experience_and_more.py  0004_remove_aboutme_education_remove_aboutme_experience_and_more.py  0005_alter_aboutme_options_alter_knowledge_options.py  0006_portfolioheader_alter_knowledge_image.py  0007_alter_aboutme_options_remove_aboutme_content_code_and_more.py  0008_remove_aboutme_description.py  0009_fact_factdesc.py  0010_fact_icon_name.py  0011_skilldesc_delete_knowledge_alter_skill_options_and_more.py  0012_resumedesc_alter_education_options_and_more.py  0013_portfoliodesc_portfolioitem.py  0014_service_servicesdesc.py  0015_testimonial_testimonialdesc.py  0016_contactinfo.py
portafolio/core/: forms.py  models.py  views.py
portafolio/media/projects/: _00aa28db-71b9-4c97-9fad-7557ae49322d_jxMKMLU.jfif
portafolio/media/testimonials/: _ee859d54-38b0-442b-9674-d8442ceaaae0.jfif
portafolio/portafolio/: settings.py  settings_dev.py  settings_prod.py  urls.py  wsgi.py
portafolio/portfolio/: admin.py  apps.py  models.py  views.py
portafolio/portfolio/migrations/: 0001_initial.py  0002_alter_project_options_project_content_code_and_more.py
portafolio/static/core/css/: app.css  (+1 more)
portafolio/templates/about-me/: about-me.html
portafolio/templates/core/: base.html  contact.html  home.html
(+5 files in other folders)
