[tool.poetry]
name = "portafolio-env"
version = "0.1.3"
description = ""
authors = ["Gad Miranda <flareon_rojo@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "3.0.0"
django = "5.0.4"
black = "^24.4.0"
isort = "^5.13.2"
pillow = "^10.3.0"
django-decouple = "^2.1"
ruff = "^0.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
